# nevil-playground

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/enki/: CMakeLists.txt
include/nevil/: arena.hpp  print.hpp  robot.hpp  view.hpp
include/nevil/objects/: light.hpp  object.hpp  switch.hpp  wall.hpp
src/: arena.cpp  main.cpp  robot.cpp  view.cpp
src/objects/: light.cpp  object.cpp  switch.cpp  wall.cpp
